# client_server_c_test

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md
dep_docker/: Dockerfile
helm/register_job/: Chart.yaml  values.yaml
helm/register_job/templates/: _helpers.tpl  deployment.yaml  register-player.yaml  service.yaml  serviceaccount.yaml
proto/: agent.proto  game_comm.proto
src/: comm_client.cc  comm_client.h  comm_server.cc  local_opp.c  local_ref.cc  logic.cc  logic.h  player.c  referee_server.cc  referee_server.h  server.cc
test/: test  test.c
